[package]
name = "once"
version = "0.1.0"
authors = [
    "Hood Chatham <hood@mit.edu>",
    "Dexter Chua <dexter@math.harvard.edu>",
]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bivec = { path = "../bivec" }

rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
default = []
concurrent = ["rayon"]

[[bench]]
name = "criterion"
harness = false
