[package]
name = "once"
version = "0.1.0"
authors = [
    "Joey Beauvais-Feisthauer <joeybf@wayne.edu>",
    "Hood Chatham <hood@mit.edu>",
    "Dexter Chua <dexter@math.harvard.edu>",
]
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bivec = { path = "../bivec" }
maybe-rayon = { path = "../maybe-rayon" }

[dev-dependencies]
criterion = "0.5"
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
proptest = "1.7.0"
rand = "0.9"

[features]
default = []
concurrent = ["maybe-rayon/concurrent"]

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[[bench]]
name = "criterion"
harness = false
