[package]
name = "saveload"
version = "0.1.0"
authors = ["Dexter Chua <dalcde@yahoo.com.hk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11.1"
# Use my fork of tempfile because I need `try_clone`, which I implemented myself
tempfile = { git = "https://github.com/JoeyBF/tempfile" }
