[package]
name = "sseq"
version = "0.1.0"
authors = ["Dexter Chua <dec41@srcf.net>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra/", default-features = false }
bivec = { path = "../bivec/" }
chart = { path = "../chart/" }
fp = { path = "../fp/", default-features = false }
maybe-rayon = { path = "../maybe-rayon" }
once = { path = "../once/" }

serde = "1.0.0"
serde_json = "1.0.0"

[dev-dependencies]
expect-test = "1.1.0"
rand = "0.8"

[features]
default = ["odd-primes"]
concurrent = ["maybe-rayon/concurrent"]
odd-primes = ["fp/odd-primes"]
