[package]
name = "python_algebra"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paste = "0.1"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
enum_dispatch = "0.2.0"
nom = "5.0.0"
parking_lot = "0.10"

algebra = { path = "../../../ext/crates/algebra" }
saveload = { path = "../../../ext/crates/saveload" }
bivec = { path = "../../../ext/crates/bivec" }
error = { path = "../../../ext/crates/error" }
fp = { path = "../../../ext/crates/fp" }

python_fp = { path = "../python_fp" }
python_utils = { path = "../python_utils" }


[dev-dependencies]
rand = "0.7.0"
rstest = "0.5.0"
bencher = "0.1.5"

[features]
prime-two = []

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]