[package]
name = "python_algebra"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paste = "0.1"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
nom = "7.0.0"
parking_lot = "0.10"
derive_more = "0.99.17"
anyhow = "1.0.0"

algebra = { path = "../../../ext/crates/algebra" }
bivec = { path = "../../../ext/crates/bivec" }
fp = { path = "../../../ext/crates/fp" }

python_fp = { path = "../python_fp" }
python_utils = { path = "../python_utils" }
rustc-hash = { version = "1.0" }


[dev-dependencies]
rand = "0.7.0"
rstest = "0.6.4"
bencher = "0.1.5"

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]
