[package]
name = "python_fp"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
enum_dispatch = "0.2.0"

paste = "0.1"
python_utils = { path = "../python_utils" }

saveload = { path = "../../../ext/crates/saveload" }
fp = { path = "../../../ext/crates/fp" }

[dev-dependencies]
rand = "0.7.0"
rstest = "0.5.0"
bencher = "0.1.5"

[features]
prime-two = []

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]